--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,27 +1,44 @@
 <html>
     <head>
         <meta charset="UTF-8"/>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     </head>
     <body>
-        <div th:each="pedido : ${pedidos}">
-            <div th:text="${pedido.nomeProdutos}">
-                Nome do Produto
-            </div>
-            <div th:text="${pedido.valorNegociado}">
-                Valor:
-                <span>200,99</span>
-            </div>
-            <div >Data da entrega:
-                <span th:text="${pedido.dataEntrega}">06/04/2021</span>
-            </div>
-            <div>Produto</div>
-            <div th:text="${pedido.urlProduto}">url do Produto</div>
-            <div>Descrição</div>
-            <div>
-                <textarea th:text="${pedido.descricao}">Descrição do pedido</textarea>
-            </div>
-            <div>
-                <img th:src="${pedido.urlImagem}" src=""/>
+        <div class="container">
+            <div class="card" th:each="pedido : ${pedidos}">
+                <div class="card-header" th:text="${pedido.nomeProdutos}">
+                    Nome do Produto
+                </div>
+
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-12 col-sm-8 mb-3">
+                            <div class="row">
+
+                                <div class="col-md-5" th:text="${pedido.valorNegociado}">
+                                    Valor:
+                                    <span>200,99</span>
+                                </div>
+                                <div class="col-md-7">Data da entrega:
+                                    <span th:text="${pedido.dataEntrega}">06/04/2021</span>
+                                </div>
+                            </div>
+                            <div>Produto</div>
+                            <div>
+                                <input class="form-control" th:text="${pedido.urlProduto}">
+                            </div>
+                            <div>Descrição</div>
+                            <div>
+                                <textarea class="form-control" th:text="${pedido.descricao}">Descrição do pedido</textarea>
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-4">
+                            <div>
+                                <img class="img-thumbnail" th:src="${pedido.urlImagem}" src=""/>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
